src/objects/plantype__c.object
<CustomObject>
    <fields>
        <fullName>Barcolor__c</fullName>
        <description>sample number after # hex color</description>
        <label>Barcolor</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldset__c</fullName>
        <description>This should be a choice from Plan field set name</description>
        <label>Fieldset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sort__c</fullName>
        <label>sort</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plantype</label>
    <nameField>
        <label>Plantype</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plantypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>